[gd_scene load_steps=2 format=3 uid="uid://befku7ywbx5mt"]

[ext_resource type="Script" uid="uid://dopnfi7bxocyu" path="res://Scenes/components/collectable_component.gd" id="1_jhyw4"]

[node name="CollectableComponent" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_jhyw4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
